--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongo": "^0.1.0",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.3.4",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^7.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.8",
